# kossodo_chat

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/skills/gemini-chatbot/: SKILL.md
.claude/skills/gemini-chatbot/references/: caching_patterns.md  cost_optimization.md  function_calling.md
.claude/skills/gemini-chatbot/scripts/: cache_manager.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: chat.py  health.py
app/config/: settings.py
app/core/: __init__.py  agent.py
app/core/prompts/: kossodo_prompt.py  kossomet_prompt.py  router_prompt.py  system_prompt.py
app/db/: session.py
app/db/repositories/: __init__.py  base.py  conversation.py
app/models/: __init__.py  database.py  schemas.py
app/services/: gemini.py
app/services/tools/: __init__.py  base.py  end_conversation.py  registry.py  save_contact.py  save_inquiry.py  set_company.py
frontend/: index.html
